--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "nodejs-react-components",
+  "name": "nodejs-react-recipe",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "src/index.js",
+    "startdev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,10 +13,15 @@
   "dependencies": {
     "bcrypt": "^3.0.7",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.3.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "mysql2": "^2.0.0",
     "sequelize": "^5.21.2"
+  },
+  "engines": {
+    "node": "10.13.0"
   }
 }
