--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "nodejs-react-recipe",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "src/index.js",
-    "startdev": "nodemon src/index.js",
+    "start": "node index.js",
+    "startdev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
