--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=sql10.freemysqlhosting.net
-DB_USER=sql10313329
-DB_PASS=am68nexLNr
+DB_USER=sql10313965
+DB_PASS=nbe9FwXFQi
 DB_PORT=3306
-DB_NAME=sql10313329
+DB_NAME=sql10313965
 AUTH_SECRET=secret12345
